[package]
name = "apex-sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.1", features = ["full"] }
dashmap = "6.1"
ahash = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
dotenvy = "0.15"
futures-util = "0.3"
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
tungstenite = "0.23"